--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="root"></div>
-        <div id="modal"></div>
+        <div id="modal-container"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
